# onemetric-plus

./: .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code_quality.yml
analysis/: numerical.py  visualization.py
core/: config.py  logging_config.py  persistence_manager.py
data/raw/: data1.txt  data2.txt  data3.txt
engineering/: engineering.py
engineering/extraction/: __init__.py  extraction.py
engineering/loading/: __init__.py
engineering/transformation/: __init__.py  transformation.py
notebooks/: dataprocessing.ipynb  dataprocessingSampling.ipynb  some_draft_notebook.ipynb
schemas/: __init__.py
schemas/processed/: __init__.py  bank.py  channel.py  date_model.py  point_of_sale.py  product.py  transaction.py
schemas/raw/: __init__.py  data.py
