[tool.poetry]
name = "onemetric-plus"
version = "0.1.0"
description = "Analytical tool for 'ABC' to dynamically monitor and forecast store credit demands"
license = "MIT"
authors = ["Juan Pablo Cadena Aguilar <jpcadena@espol.edu.ec>"]
maintainers = [
    "Juan Pablo Cadena Aguilar <jpcadena@espol.edu.ec>"
]
readme = "README.md"
homepage = "https://github.com/jpcadena/onemetric-plus"
repository = "https://github.com/jpcadena/onemetric-plus"
documentation = "https://github.com/jpcadena/onemetric-plus"
keywords = ["python", "data-science", "data-analysis", "data-visualization",
    "pandas", "numpy", "scikit-learn", "pydantic", "machine-learning",
    "outliers", "forecast", "sales-demand", "seasonality-analysis", "ruff",
    "isort", "black-formatter", "mypy", "real-time", "data-streaming",
    "solid-principles"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Typing :: Typed",
]
packages = [{include = "onemetric_plus"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.0.3"
pandas-stubs = "^2.0.3.230814"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
python-dotenv = "^1.0.0"
ipython = "^8.14.0"
notebook = "^7.0.2"
jupyterlab = "^4.0.5"
isort = "^5.12.0"
black = {extras = ["jupýter"], version = "^23.7.0"}
ruff = "^0.0.285"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
pydantic = "^2.2.1"
pytest = "^7.4.0"
pydantic-settings = "^2.0.3"

[tool.poetry.urls]
"OneMetric+" = "https://github.com/jpcadena/onemetric-plus"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py311"]
exclude = '''
(
    /(\.venv
  | \.mypy_cache
  | \.ruff_cache
  | tests)/
)
'''
skip-string-normalization = true

[tool.mypy]
strict = true
python_version = "3.11"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ".venv|tests|.mypy_cache|.ruff_cache"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
implicit_reexport = false
strict_optional = true
strict_equality = true
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
no_implicit_reexport = true
ignore_missing_imports = true

[tool.mypy-tests]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
profile = "black"

[tool.ruff]
select = ["E", "F"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 80
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.bandit]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.pylint.MASTER]
ignore=".venv"
py-version="3.11.0"

[tool.pylint.LOGGING]
logging-modules="logging"

[tool.pylint.MISCELLANEOUS]
notes="FIXME,XXX,TODO"

[tool.pylint.SIMILARITIES]
min-similarity-lines=6

[tool.pylint.FORMAT]
max-line-length=80
good-names="v"

[tool.pylint.BASIC]
extension-pkg-whitelist="pydantic"

[tool.pylint.TYPECHECK]
contextmanager-decorators="contextlib.contextmanager"

[tool.pylint.DESIGN]
max-parents=10
